Bug 44722 - Seg fault in glitter_scan_converter_render while opening pdf with evince (git)
Summary: Seg fault in glitter_scan_converter_render while opening pdf with evince (git)
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: pdf backend (show other bugs)
Version: 1.10.3
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Adrian Johnson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-12 06:51 UTC by arno.b
Modified: 2012-02-09 11:47 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
backtraces (6.62 KB, text/plain)
2012-01-12 06:51 UTC, arno.b
Details
The pdf document that produces the crash. (1.78 MB, application/x-download)
2012-01-12 06:52 UTC, arno.b
Details
New backtrace of the crash (5.43 KB, text/plain)
2012-01-16 01:11 UTC, arno.b
Details

Description arno.b 2012-01-12 06:51:29 UTC
Created attachment 55490 [details]
backtraces

I use the ppa https://launchpad.net/~xorg-edgers/+archive/ppa on Ubuntu natty (cairo 1.11.3+git20120111.738be215-0ubuntu0ricotz~natty0)

When I a the given pdf file using evince, Cairo crashes with a seg fault in:
#0  0x00007eff9b552a00 in full_row (converter=0x7ffff090, renderer=0x7eff8783ad80)
    at /build/buildd/cairo-1.11.3+git20120111.738be215/src/cairo-tor-scan-converter.c:1363

Using evince 2.32.0 (poppler/cairo 0.16.4).
Comment 1 arno.b 2012-01-12 06:52:59 UTC
Created attachment 55491 [details]
The pdf document that produces the crash.
Comment 2 arno.b 2012-01-16 01:11:23 UTC
Created attachment 55626 [details]
New backtrace of the crash

Nex backtrace using the latest git version.
The crash comes from glitter_scan_converter_render now.
Comment 3 Chris Wilson 2012-02-09 11:47:17 UTC
commit 658fa75a5c78c8ca08bc5c1f8f29d50a9da0aaf5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Feb 9 19:40:26 2012 +0000

    polygon: Extend intersection edges to cover entire range
    
    By simply swapping the continuation edges, we end up with a set of edges
    that are defined over a shorter range than their extents. Whilst this is
    numerically stable at our normal precision we start to encounter issues
    when using a coarser grid during rasterisation as the derivative of the
    edge becomes unstable.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=44722
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.